--- a/OneDrive/Desktop/Angularjs/practice5/src/app/patient-appointments/patient-appointments.component.html
+++ b/OneDrive/Desktop/Angularjs/practice5/src/app/patient-appointments/patient-appointments.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid patient-appointments">
+<div class="container-fluid patient-appointments" id="appointment">
 
   <div class="container p-3 pt-5 text-start">
     <h2>Your Appointments</h2>
