--- a/OneDrive/Desktop/Angularjs/practice5/src/app/patient-home/patient-home.component.html
+++ b/OneDrive/Desktop/Angularjs/practice5/src/app/patient-home/patient-home.component.html
@@ -1,4 +1,4 @@
-<div class="patient-home pt-5 pb-5">
+<div class="patient-home pt-5 pb-5" id="home">
   <h2 class="text-center pt-5 pb-4">Welcome to the Patient Portal</h2>
 
   <div class="search-section text-center">
