--- a/OneDrive/Desktop/Angularjs/practice5/src/app/chat/chat.component.html
+++ b/OneDrive/Desktop/Angularjs/practice5/src/app/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="container chat-container">
+<div class="container chat-container" id="chat">
   <div class="row" >
 
     <div class="col-md-4">
