--- a/OneDrive/Desktop/Angularjs/practice5/src/app/header/header.component.css
+++ b/OneDrive/Desktop/Angularjs/practice5/src/app/header/header.component.css
@@ -172,3 +172,78 @@ border-radius: 2px;
 .dropdown:hover .avatar {
   border-color: #4CAF50;
 }
+
+.menu-toggle {
+  display: none;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+/* Close button for small screens */
+.close-menu {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: #ff416a;
+}
+
+/* Styles for screens smaller than 940px */
+@media (max-width: 940px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .logo a {
+    margin-left: 0;
+    font-size: 20px;
+  }
+
+  .nav-links {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    height: 100vh;
+    margin-left: 60%;
+    background-color: rgb(50, 40, 40);
+    flex-direction: column;
+    padding-top: 60px;
+    transition: top 0.3s ease;
+    width: 343px;
+  }
+
+  .nav-links.show {
+    left: 0;
+  }
+
+  .nav-links li {
+    margin-left: 0;
+    width: 100%;
+    text-align: left;
+    padding: 10px 20px;
+    font-size: 1.8rem;
+  }
+
+  .nav-links a {
+
+    width: 100%;
+    text-align: left;
+  }
+
+  /* Show the menu toggle button */
+  .menu-toggle {
+    display: block;
+    font-size: 30px;
+    margin-left: auto;
+    margin-top: -40px;
+  }
+
+  /* Show close button when the menu is open */
+  .close-menu {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 250px;
+  }
+} 
