--- a/OneDrive/Desktop/Angularjs/practice5/src/app/patient-notifications/patient-notifications.component.html
+++ b/OneDrive/Desktop/Angularjs/practice5/src/app/patient-notifications/patient-notifications.component.html
@@ -1,4 +1,4 @@
-<div class="container notification-page pt-5 pb-5">
+<div class="container notification-page pt-5 pb-5" id="notifications">
   <h2 class="pt-5">Notifications</h2>
   
   <div class="row pt-4">
